syntax = "proto3";
package monitor;

import "google/protobuf/empty.proto";
import "monitor_info.proto";

service MonitorInfoService {
	rpc ReportMonitorInfo (MonitorInfo) returns (google.protobuf.Empty) {}
}